5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4384/executions/1735_2525.log
== TEST (2019-06-14 11:43:55) 
-- CODE:
x=int(input("digite um valor: "))
qd=0
for i in range(1,	x+1):
	if(x%1==0):
		print(i)
-- OUTPUT:
1
2
3
4
5
6
7
8
9
10
11
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-14 11:44:09) 
-- CODE:
x=int(input("digite um valor: "))
for i in range(1,	x+1):
	if(x%1==0):
		print(i)
-- OUTPUT:
1
2
3
4
5
6
7
8
9
10
11
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-14 11:44:34) 
-- CODE:
x=int(input("digite um valor: "))
for i in range(1,	x+1):
	if(x%i==0):
		print(i)
-- OUTPUT:
1
2
3
4
6
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-14 11:45:42) 
-- CODE:
x=int(input("digite um valor: "))
qt=0
for i in range(1,	x+1):
	qt=qt+1
	if(x%i==0):
		print(i)
		print(qt,"divisores")
-- OUTPUT:
1
1 divisores
2
2 divisores
3
3 divisores
4
4 divisores
6
6 divisores
12
12 divisores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-14 11:46:31) 
-- CODE:
x=int(input("digite um valor: "))
qt=0
for i in range(1,	x+1):
	if(x%i==0):
		qt=qt+1
		print(i)
		print(qt,"divisores")
-- OUTPUT:
1
1 divisores
2
2 divisores
3
3 divisores
4
4 divisores
6
5 divisores
12
6 divisores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-14 11:47:01) 
-- CODE:
x=int(input("digite um valor: "))
qt=0
for i in range(1,	x+1):
	if(x%i==0):
print(i)
		print(qt,"divisores")
-- ERROR:
File "XXXX", line 5
    print(i)
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-14 11:47:08) 
-- CODE:
x=int(input("digite um valor: "))
qt=0
for i in range(1,	x+1):
	if(x%i==0):
print(i)
print(qt,"divisores")
-- ERROR:
File "XXXX", line 5
    print(i)
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
